# home-logistics-platform

./: LICENSE  README.md  pyproject.toml
docs/: DOMAIN_MODEL.md  PROJECT_PHILOSOPHY.MD  ROADMAP.md  USE_CASES.md  domain-model-v1.drawio.xml
src/: main.py
src/api/routes/: health.py
src/api/routes/inventory/: allocations.py  health.py
src/core/: config.py
src/domains/inventory/models/: inventory_allocation.py  item.py  item_allocation_request.py
src/domains/inventory/services/: allocation_service.py
tests/: test_allocation_service.py  test_health.py  test_inventory_allocations.py
